fixed links on the chat page

--- a/syndbb/templates/chat.html
+++ b/syndbb/templates/chat.html
@@ -9,9 +9,9 @@
       <b>Server Port:</b> 6697 (SSL only)<br/>
       <br/>
       <b>Username:</b> &lt;your username&gt;<br/>
-      <b>Password:</b> &lt;<a href="/account/?preferences" style="border-bottom: 1px dashed #555;">auth key</a>&gt;<br/>
+      <b>Password:</b> &lt;<a href="/account/preferences" style="border-bottom: 1px dashed #555;">auth key</a>&gt;<br/>
       <br/>
-      <a href="https://d2k5.com/forums/?thread=15" style="border-bottom: 1px dashed #555;">Need help setting up IRC?</a>
+      <a href="https://d2k5.com/tech/15" style="border-bottom: 1px dashed #555;">Need help setting up IRC?</a>
       <br/><br/> For clients that don't have a username field, use <strong>&lt;username&gt;/D2K5:&lt;auth key&gt;</strong> as your password.<br/> <strong>The password field may also be called server password in some clients</strong>.
       <br/><br/>
       <b>IRC Clients:</b>
