--- a/syndbb/templates/info.html
+++ b/syndbb/templates/info.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %} {% block body %}
 	<p class="lead">Information</p>
-	<p>SynDBB is a compilation of all the best parts of bulletin boards, intended for IRC/ZNC integration, which is where the name comes from (Syndication + IRCd + Bulletin Boards)</p>
+	<p>SynDBB is a compilation of all the best parts of bulletin boards, intended for IRC/ZNC integration, which is where the name comes from (Syndication + IRCd + Bulletin Boards).</p>
 
 	<p>It is an open-source cross-platform forum software written in Python + Flask. It's primarily intended to be used for the D2K5 website, however users are welcome and encouraged to submit improvements, features, feature requests, fixes and bug reports.</p>
 
-	<p>The code is released under the Q Public License 1.0 (QPL-1.0)</p>
+	<p>The code is released under the <a href="https://tldrlegal.com/license/q-public-license-1.0-(qpl-1.0)#summary" target="_blank">Q Public License 1.0 (QPL-1.0)</a></p>
 
 	<p>
 		<strong>Current Version/Revision:</strong> {{ syndbb_version }} ({{ syndbb_full_hash }})<br/>
@@ -20,10 +20,12 @@
 		<li>Custom forums/channels can be made to have their own guidelines and description.</li>
 		<li>List/grid view toggle for file uploads and forums/threads.</li>
 		<li>Thread gallery/image view mode.</li>
+		<li>QDB style quote database for IRC quotes.</li>
 		<li>Avatar history with the ability to re-use avatars without uploading them.</li>
 		<li>Users can submit their own emoticons and have them admin approved.</li>
 		<li>Uploaded files get shredded (secure erased) when the user chooses to delete them.</li>
 		<li>Pastebin system with a listing of all of your pastes.</li>
+		<li>Thread/post karma (upvoting and downvoting).</li>
 		<li>Karma positive/negative/total system for IRC.</li>
 		<li>IRC statistics tracking for lines and words spoken.</li>
 	</ul>
