--- a/syndbb/templates/pastebin.html
+++ b/syndbb/templates/pastebin.html
@@ -24,7 +24,7 @@
         </div>
       </div>
       {% endif %}
-      {% for paste in pasteList %}
+      {% for paste in paste_list %}
       <div class="panel panel-default">
         <div class="panel-body">
           <div class="media">
