Added successful/failed login tracking for users with a page where you can view your login history Fixed the serving of robots.txt and favicon.ico

--- a/syndbb/templates/admin.html
+++ b/syndbb/templates/admin.html
@@ -2,6 +2,7 @@
 <h2>Users:</h2>
 <a href="/account/admin/ban" style="color: #fff; text-decoration: none;" class="btn btn-info">Ban User</a>
 <a href="/account/admin/users" style="color: #fff; text-decoration: none;" class="btn btn-info">Member List</a>
+<a href="/account/admin/logins" style="color: #fff; text-decoration: none;" class="btn btn-info">Login History</a>
 <br/>
 <h2>Approve/Unapprove:</h2>
 <a href="/account/admin/quotes" style="color: #fff; text-decoration: none;" class="btn btn-info">Quotes</a>
