Added quote ratings for quote database. Removed unneeded geoip stuff which slows the site down. Minor code fixes.

--- a/syndbb/static/css/rating.css
+++ b/syndbb/static/css/rating.css
@@ -48,6 +48,11 @@
   margin-right: 15px;
 }
 
+.QuoteContainer{
+  display: block;
+  margin-right: 32px;
+}
+
 .actions-main{
   margin-right: 33px;
 }
