--- a/syndbb/templates/admin_logins.html
+++ b/syndbb/templates/admin_logins.html
@@ -13,7 +13,7 @@
     {% for login in logins %}
     <tr>
       <td class=""><a href="/user/{{get_name(login.user_id)}}" style="{{get_group_style_from_id(login.user_id)}}">{{get_name(login.user_id)}}</a></td>
-      <td class="">[{{country_from_ip(login.ip)}}] {{login.ip}}</td>
+      <td class="">{{login.ip}}</td>
       <td class="">{{time_ago(login.time)}}</td>
       <td class="">{{human_date(login.time)}}</td>
       {% if login.login == 0 %}
