--- a/syndbb/templates/quote_list.html
+++ b/syndbb/templates/quote_list.html
@@ -27,11 +27,18 @@
     <div class="panel-body">
   	<div class="media">
   	  <div class="media-body">
-  		<pre>{{quote.content}}</pre>
-  		<span class="text-muted" style="float:right; text-align: right;">
-  		  <a href="#{{quote.id}}">{{human_date(quote.time)}}</a>
-  		</span>
-  		<span class="text-muted">submitted by <a href="/user/{{quote.user.username}}" class="profile-inline" style="{{get_group_style_from_id(quote.user_id)}}">{{quote.user.username}}</a></span>
+        <div class="RatingContainer Rating">
+            <a href="/functions/rate_quote/?quote_id={{quote.id}}&type=up&uniqid={{user_session.sessionid}}" class="RatingUp DoRatingUp"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
+            <span class="PostRating-{{quote.id}} Rating">{{get_quote_rating(quote.id)}}</span>
+            <a href="/functions/rate_quote/?quote_id={{quote.id}}&type=down&uniqid={{user_session.sessionid}}" class="RatingDown DoRatingDown"><i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+        </div>
+        <div class="QuoteContainer">
+          <pre>{{quote.content}}</pre>
+          <span class="text-muted" style="float:right; text-align: right;">
+          <a href="#{{quote.id}}">{{human_date(quote.time)}}</a>
+          </span>
+          <span class="text-muted">submitted by <a href="/user/{{quote.user.username}}" class="profile-inline" style="{{get_group_style_from_id(quote.user_id)}}">{{quote.user.username}}</a></span>
+        </div>
   	  </div>
   	</div>
     </div>
