--- a/syndbb/templates/admin_users.html
+++ b/syndbb/templates/admin_users.html
@@ -12,6 +12,8 @@
       <div class="media-body">
         <span class="text-muted" style="float:right; text-align: right;">
           <i>{{get_user_title(luser.title)}}&nbsp;</i><br/>
+          <a href="/functions/drop_session/?user={{luser.user_id}}&uniqid={{user_session.sessionid}}" title="Drop Sessions (Force Log Out)" class="text-muted deletebutton"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i></a>
+          <a href="/account/admin/password/?user={{luser.user_id}}" title="Change User Password" class="text-muted"><i class="fa fa-key" aria-hidden="true"></i></a>
           <a href="/account/admin/rank/?user={{luser.user_id}}" title="Change User Rank" class="text-muted"><i class="fa fa-star-half-o" aria-hidden="true"></i></a>
           <a href="/account/admin/ban/?user={{luser.user_id}}" title="Ban User" class="text-muted"><i class="fa fa-fw fa-ban" aria-hidden="true"></i></a>
         </span>
