Added rank field to IRC user info for better IRC integration. Added a requested invites page for admins.

--- a/syndbb/templates/admin.html
+++ b/syndbb/templates/admin.html
@@ -8,6 +8,7 @@
 <a href="/account/admin/quotes" style="color: #fff; text-decoration: none;" class="btn btn-info">Quotes</a>
 <a href="/account/admin/channels" style="color: #fff; text-decoration: none;" class="btn btn-info">Channels</a>
 <a href="/account/admin/emoticons" style="color: #fff; text-decoration: none;" class="btn btn-info">Emoticons</a>
+<a href="/account/admin/invites" style="color: #fff; text-decoration: none;" class="btn btn-info">Invite Requests</a>
 <br/>
 <h2>Statistics:</h2>
 <dl class="dl-horizontal">
