--- a/syndbb/templates/upload_gallery.html
+++ b/syndbb/templates/upload_gallery.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}{% block body %}
 <div class="thread-title"><span style="float: right;">{{human_size(total_size)}}</span>{{filecount}} images</div>
-<div class="upload-title"><a href="/upload" title="List View" style="float:right;"><i class="fa fa-list-alt" aria-hidden="true"></i></a> <a href="/upload/album/?u=admin&i=" id="albumlink" title="Album View" style="float:right; margin-right: 12px;"><i class="fa fa-th-large" aria-hidden="true"></i></a></div>
+<div class="upload-title"><a href="/upload" title="List View" style="float:right;"><i class="fa fa-list-alt" aria-hidden="true"></i></a> <a href="/upload/album/?u={{user.username}}&i=" id="albumlink" title="Album View" style="float:right; margin-right: 12px;"><i class="fa fa-th-large" aria-hidden="true"></i></a></div>
 <div class="panel panel-default">
   <div class="panel-body">
     <form id="uploadform" action="/functions/upload" method="post" enctype="multipart/form-data">
