--- a/syndbb/templates/layout.html
+++ b/syndbb/templates/layout.html
@@ -112,17 +112,23 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars" aria-hidden="true"></i> Channels <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <!--<li><a href="/forums/">Forum Activity</a></li>
-                  <li><a href="/custom-forums/">Custom Forums</a></li>
-                  <li class="forum-list"><a href="/emoticons/">Emoticon List</a></li>-->
-                  <!-- <div class="nsfw-forum">NSFW</div> -->
                   <li class="forum-list"><a href="#">Official</a></li>
                   {% for forum in forums %}
-                  <li><a href="/{{ forum.short_name }}/"><span style="float:right;">#{{ forum.short_name }}</span>{{ forum.name }}</a></li>
+                  <li>
+                    <a href="/{{ forum.short_name }}/">
+                      <span style="float:right;">#{{ forum.short_name }}</span>
+                      {{ forum.name }}
+                    </a>
+                  </li>
                   {% endfor %}
                   <li class="forum-list"><a href="#">Unofficial</a></li>
                   {% for forum in custom_forums %}
-                  <li><a href="/{{ forum.short_name }}/"><span style="float:right;">#{{ forum.short_name }}</span>{{ forum.name }}</a></li>
+                  <li>
+                    <a href="/{{ forum.short_name }}/">
+                      <span style="float:right;">#{{ forum.short_name }}</span>
+                      {{ forum.name }}
+                    </a>
+                  </li>
                   {% endfor %}
                   {% if user_session.sessionid %}
                   <li class="forum-list" style="text-align: center;"><a href="/request-channel/">REQUEST A CHANNEL</a></li>
@@ -132,17 +138,20 @@
               <li><a href="{{ url_for('chat') }}"><i class="fa fa-comments" aria-hidden="true"></i> Chat</a></li>
               <li><a href="{{ url_for('events') }}"><i class="fa fa-calendar" aria-hidden="true"></i> Events</a></li>
               <li><a href="{{ url_for('ban_list') }}"><i class="fa fa-ban" aria-hidden="true"></i> Bans</a></li>
-              {% if user_session.sessionid %}
-              <li><a href="{{ url_for('pastebin') }}"><i class="fa fa-clipboard" aria-hidden="true"></i> My Pastes</a></li>
-              <li><a href="{{ url_for('upload') }}"><i class="fa fa-server" aria-hidden="true"></i>My Files</a></li>
-              {% endif %}
-              <!--<li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-glass" aria-hidden="true"></i> Services <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="/video/">Video Chat</a></li>
-                      <li><a href="/synctube/">SyncTube</a></li>
-                    </ul>
-                  </li>-->
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-coffee" aria-hidden="true"></i> Services <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  {% if user_session.sessionid %}
+                  <li><a href="{{ url_for('pastebin') }}">Pastebin</a></li>
+                  <li><a href="{{ url_for('upload') }}">File Upload</a></li>
+                  {% endif %}
+                  <li><a href="/chat/">Internet Relay Chat</a></li>
+                  <li><a href="/chat/">XMPP Network</a></li>
+                  <li><a href="/quotes/">Quote Database</a></li>
+                  <li><a href="/vidya/">Video Chat</a></li>
+                  <li><a href="/synctube/">SyncTube</a></li>
+                </ul>
+              </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               {% if user_session.sessionid %}
