--- a/syndbb/static/css/d2k5.css
+++ b/syndbb/static/css/d2k5.css
@@ -49,6 +49,23 @@
   }
 }
 
+.blink {
+  text-decoration: blink;
+  animation: blink-animation 1s steps(5, start) infinite;
+  -webkit-animation: blink-animation 1s steps(5, start) infinite;
+}
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+
+
 .image-editor {
   width: 250px;
 }
