--- a/syndbb/templates/chat.html
+++ b/syndbb/templates/chat.html
@@ -3,7 +3,10 @@
   <div class="col-md-6">
     <h3>Internet Relay Chat</h3>
     <div style="margin-left: 14px;">
-      <a href="https://irc.d2k5.com/" style="color: #fff; text-decoration: none;" class="btn btn-info">Browser Client</a> <a href="ircs://irc.d2k5.com:6697/" style="color: #fff; text-decoration: none;" class="btn btn-info">IRC Client</a> <a href="/quotes/" style="color: #fff; text-decoration: none;" class="btn btn-info">Quote Database</a>
+      {% if not user_session.sessionid %}<a href="/request-invite/" style="color: #fff; text-decoration: none;" class="btn btn-info">Request an invite</a> {% endif %}
+      <a href="https://irc.d2k5.com/" style="color: #fff; text-decoration: none;" class="btn btn-info">Browser Client</a>
+      <a href="ircs://irc.d2k5.com:6697/" style="color: #fff; text-decoration: none;" class="btn btn-info">IRC Client</a>
+      <a href="/quotes/" style="color: #fff; text-decoration: none;" class="btn btn-info">Quote Database</a>
       <br/><br/>
       <b>Server Addresses:</b> irc.d2k5.com, 5n3llbatdsan32kx.onion<br/>
       <b>Server Port:</b> 6697 (SSL only)<br/>
