Fixed header navigation and site footer in tablet/mobile layout. Fixed minor issues with the responsive layout.

--- a/syndbb/templates/home.html
+++ b/syndbb/templates/home.html
@@ -3,7 +3,7 @@
   <div style="margin-left: 16pt; float: right;">
     <a href="https://paypal.me/d2k5" style="color: #fff; text-decoration: none;" class="btn btn-info">PayPal</a> <a href="https://blockchain.info/address/1DCGww1Y55fukRbLEkZuzJBb2nUJ5Xx1rn" style="color: #fff; text-decoration: none;" class="btn btn-info">Bitcoin</a>
   </div>
-  <div style="margin-left: 14px; width:340px;">
+  <div style="margin-left: 14px; width:340px;" class="donation-info">
     Donations will help us afford our servers and continued existence.<br/> Users who donate $15 or more will receive the <a href="/gold-member/"><span style="{{get_group_style('Gold Member')}}">Gold Member</span></a> rank.
     <br/><br/>
   </div>
