--- a/syndbb/templates/layout.html
+++ b/syndbb/templates/layout.html
@@ -194,7 +194,7 @@
 
     <footer class="footer">
       <div class="container-fluid">
-        <p class="text-muted" style="font-style: italic; float:right; text-align: right;">
+        <p class="text-muted footer-notice" style="font-style: italic; float:right; text-align: right;">
           All trademarks and copyrights on this page are owned by their respective parties.<br/> Images and files uploaded are the responsibility of the user. Comments are owned by the user.<br/> If you continue to use this site, you are consenting to our
           use of cookies.</p>
         <p class="text-muted"><a href="{{ url_for('terms') }}">D2K5 &copy; 2002 - {{ now.year }}</a> - <a href="{{ url_for('info') }}">Powered by SynDBB {{ syndbb_version }} ({{ syndbb_hash }})</a><br/>
