--- a/syndbb/templates/profile.html
+++ b/syndbb/templates/profile.html
@@ -6,21 +6,21 @@
 		<div class="media-left">
 			{% if not isInline %}
 				{% if user.user_id == profile.user_id %}
-				<a href="/account/avatar">
+				<a href="/account/avatar" class="profile-avatar-size">
 					<img src="{{get_avatar(profile.user_id)}}" alt="Avatar" class="img-circle pull-left profile-avatar-size" style="padding: 8px;"/>
 				</a>
 				{% else %}
-				<a id="profileAvatar" href="{{get_avatar(profile.user_id)}}">
+				<a id="profileAvatar" href="{{get_avatar(profile.user_id)}}" class="profile-avatar-size">
 					<img src="{{get_avatar(profile.user_id)}}" alt="Avatar" class="img-circle pull-left profile-avatar-size" style="padding: 8px;"/>
 				</a>
 				{% endif %}
 			{% else %}
-			<a href="/user/{{profile.username}}">
+			<a href="/user/{{profile.username}}" class="profile-avatar-size">
 				<img src="{{get_avatar(profile.user_id)}}" alt="Avatar" class="img-circle pull-left profile-avatar-size" style="padding: 8px;"/>
 			</a>
 			{% endif %}
 			{% if not isInline %}
-			<div style="text-align: center; display: block; min-height: 340px;">
+			<div style="text-align: center; display: block; min-height: 130px; margin-top: 200px;">
 				<div class="dropdown">
 			    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars" aria-hidden="true"></i></a>
 			    <ul class="dropdown-menu">
