--- a/syndbb/templates/change_avatar.html
+++ b/syndbb/templates/change_avatar.html
@@ -7,9 +7,9 @@
         {% endif %}
     </span>
   <div class="media-body" style="padding: 8px;">
-    <form class="form-horizontal" action="/functions/upload_avatar" method="POST">
+    <form class="form-horizontal" action="/functions/upload_avatar" method="POST" enctype="multipart/form-data">
       <div class="image-editor">
-        <input type="file" id="avatar_crop" class="cropit-image-input">
+        <input type="file" id="avatar_crop" name="avatar_source" class="cropit-image-input">
         <span id="avatarform" class="hidden">
             <div class="cropit-preview"></div>
             <div class="image-size-label">
@@ -31,8 +31,8 @@
 <div class="text-center img-grid" id="activity-82">
   <div class="panel-body">
     <div class="threadimg-gallery center-block">
-      <a href="/static/data/avatars/{{user.user_id}}/{{prevavatar[0]}}" target="_blank">
-        <img src="/static/data/avatars/{{user.user_id}}/{{prevavatar[0]}}" class="activity-threadimg-gallery" alt="' . $array[0] . '"/>
+      <a href="/static/data/avatars/{{user.user_id}}/{{prevavatar[0]}}.png" target="_blank">
+        <img src="/static/data/avatars/{{user.user_id}}/{{prevavatar[0]}}.png" class="activity-threadimg-gallery" alt="' . $array[0] . '"/>
       </a>
       <div class="avatar_details">
         <span class="avatar_date">{{human_date(prevavatar[1])}}</span>
@@ -44,4 +44,22 @@
     </div>
   </div>
 </div>
-{% endfor %} {% endblock %}
+{% endfor %}
+
+<div class="thread-title" style="margin-top: 24px;">Avatar Sources</div>
+{% for prevavatar in avatar_sources %}
+<div class="text-center img-grid" id="activity-82">
+  <div class="panel-body">
+    <div class="threadimg-gallery center-block">
+      <a href="/static/data/avatars/{{user.user_id}}/{{prevavatar[0]}}.png" target="_blank">
+        <img src="/static/data/avatars/{{user.user_id}}/{{prevavatar[0]}}.png" class="activity-threadimg-gallery" alt="' . $array[0] . '"/>
+      </a>
+      <div class="avatar_details">
+        <span class="avatar_date">{{human_date(prevavatar[1])}}</span>
+      </div>
+    </div>
+  </div>
+</div>
+{% endfor %}
+
+{% endblock %}
