--- a/syndbb/templates/layout.html
+++ b/syndbb/templates/layout.html
@@ -115,7 +115,7 @@
             <ul class="nav navbar-nav">
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars" aria-hidden="true"></i> Channels <span class="caret"></span></a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu channel-list">
                   <li class="forum-list"><a href="#">Official</a></li>
                   {% for forum in forums %}
                   <li>
