--- a/syndbb/templates/profile.html
+++ b/syndbb/templates/profile.html
@@ -6,24 +6,36 @@
 		<div class="media-left">
 			{% if not isInline %}
 				{% if user.user_id == profile.user_id %}
-				<a href="/account/avatar" class="profile-avatar-size">
-					<img src="{{get_avatar(profile.user_id)}}" alt="Avatar" class="img-circle pull-left profile-avatar-size" style="padding: 8px;"/>
-				</a>
+					{% if get_avatar_source(profile.user_id) %}
+					<a href="/account/avatar">
+						<img src="{{get_avatar_source(profile.user_id)}}" alt="Avatar" class="profile-avatar-size-large"/>
+					</a>
+					{% else %}
+						<a href="/account/avatar">
+							<img src="{{get_avatar(profile.user_id)}}" alt="Avatar" class="img-circle profile-avatar-size"/>
+						</a>
+					{% endif %}
 				{% else %}
-				<a id="profileAvatar" href="{{get_avatar(profile.user_id)}}" class="profile-avatar-size">
-					<img src="{{get_avatar(profile.user_id)}}" alt="Avatar" class="img-circle pull-left profile-avatar-size" style="padding: 8px;"/>
-				</a>
+					{% if get_avatar_source(profile.user_id) %}
+						<a id="profileAvatar" href="{{get_avatar_source(profile.user_id)}}">
+							<img src="{{get_avatar_source(profile.user_id)}}" alt="Avatar" class="profile-avatar-size-large"/>
+						</a>
+					{% else %}
+						<a id="profileAvatar" href="{{get_avatar_source(profile.user_id)}}">
+							<img src="{{get_avatar(profile.user_id)}}" alt="Avatar" class="img-circle profile-avatar-size"/>
+						</a>
+					{% endif %}
 				{% endif %}
 			{% else %}
-			<a href="/user/{{profile.username}}" class="profile-avatar-size">
-				<img src="{{get_avatar(profile.user_id)}}" alt="Avatar" class="img-circle pull-left profile-avatar-size" style="padding: 8px;"/>
+			<a href="/user/{{profile.username}}">
+				<img src="{{get_avatar(profile.user_id)}}" alt="Avatar" class="img-circle profile-avatar-inline"/>
 			</a>
 			{% endif %}
 			{% if not isInline %}
-			<div style="text-align: center; display: block; min-height: 130px; margin-top: 200px;">
+			<div style="text-align: center; display: block; min-height: 130px;">
 				<div class="dropdown">
 			    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars" aria-hidden="true"></i></a>
-			    <ul class="dropdown-menu">
+			    <ul class="dropdown-menu user-options">
 						{% if user.rank >= 500 %}
 							{% if is_banned(profile.user_id) %}
 							<li><a href="/account/admin/ban/?user={{profile.user_id}}">Unban {{profile.username}}</a></li>
@@ -40,7 +52,7 @@
 		</div>
 		<div class="media-body">
 			{% if not isInline %}
-			<span class="text-muted" style="float:right; text-align: right;">
+			<div class="text-muted" style="float:right; text-align: right;">
 				<span style="font-size: 18pt;">{{get_user_title(profile.title)}}</span>&nbsp;
         {% if user.rank >= 500 %}
 				<br/>
@@ -55,12 +67,12 @@
         <i>Registered {{time_ago(profile.join_date)}}.</i>
 				<br/>
         {% endif %}
-			</span>
+			</div>
 			{% endif %}
 			<a href="/user/{{profile.username}}">
-				<p class="profile-username" style="{{get_group_style_from_id(profile.user_id)}}">{{profile.username}}</p>
+				<span class="profile-username" style="{{get_group_style_from_id(profile.user_id)}}">{{profile.username}}</span>
 			</a>
-			<dl class="dl-horizontal">
+			<dl class="dl-horizontal" style="margin-top: 10px;">
         {% if profile.gender %}
 				<dt>Gender:</dt>
 				<dd>{{profile.gender}}</dd>
