Fixed thread gallery view image d isplay. Fixed a small gap in the border of the sidebar on the front page. Fixed padding on info, terms, rules and chat rules page.

--- a/syndbb/templates/info.html
+++ b/syndbb/templates/info.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %} {% block body %}
+<div class="inner-container">
 	<p class="lead">Information</p>
 	<p>SynDBB is a compilation of all the best parts of bulletin boards, intended for IRC/ZNC integration, which is where the name comes from (Syndication + IRCd + Bulletin Boards).</p>
 
@@ -31,4 +32,5 @@
 	</ul>
 	<br/>
 	<p><b>Donate:</b> <a href="https://www.paypal.me/d2k5"><abbr title="PayPal Address">PayPal</abbr></a> / <abbr title="Bitcoin Address">1DCGww1Y55fukRbLEkZuzJBb2nUJ5Xx1rn</abbr></p>
+</div>
 {% endblock %}
