--- a/syndbb/templates/home.html
+++ b/syndbb/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} {% block body %}
-  <div class="row" style="max-width: 100%; margin: 0 auto; margin-bottom: -20px;">
+  <div class="row equal" style="max-width: 100%; margin: 0 auto;">
     <div class="col-12 col-sm-9 col-lg-10 main">
       <div class="inner-header">
         Recent Posts
